--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -1,3 +1,14 @@
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 .body_color {
   background-color: #222D32;
 }
@@ -9,4 +20,112 @@
 }
 .mt_150 {
   margin-top: 150px;
+}
+.red {
+  color: #A94442;
+}
+
+/* 左侧边栏样式 */
+.lt_aside {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 180px;
+  height: 100%;
+  background-color: #222D32;
+  z-index: 999;
+  transition: all 1s;
+}
+.lt_aside.hidemenu {
+  left: -180px;
+}
+.lt_aside .brand {
+  width: 180px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  background-color: #367FA9;
+  font-size: 25px;
+}
+.lt_aside .brand a {
+  color: #ffffff;
+}
+
+.lt_aside .user {
+  height: 180px;
+  padding-top: 30px;
+}
+.lt_aside .user img {
+  width: 80px;
+  height: 80px;
+  display: block;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+.lt_aside .user p {
+  width: 180px;
+  height: 40px;
+  line-height: 40px;
+  text-align:center;
+  color: #ffffff;
+}
+.lt_aside .nav a {
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  display: block;
+  padding-left: 40px;
+  border-left: 3px solid transparent;
+  color: #ffffff;
+}
+.lt_aside .nav a.current {
+  background-color: #1D1F21;
+  border-left: 3px solid #006699;
+}
+.lt_aside .nav i {
+  margin-right: 5px;
+}
+.lt_aside .nav .child a {
+  padding-left: 60px;
+}
+
+/* 主体部分 */
+.lt_main {
+  padding-left: 180px;
+  padding-top: 50px;
+  height: 1000px;
+  transition: all 1s;
+}
+.lt_main.hidemenu {
+  padding-left: 0;
+}
+.lt_main .lt_topbar {
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: #3C8DBC;
+  padding-left: 180px;
+  transition: all 1s;
+  z-index: 666;
+}
+.lt_topbar.hidemenu {
+  padding-left: 0;
+}
+.lt_topbar a {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+}
+.lt_main .breadcrumb {
+  margin-top: 20px;
+}
+.echarts_1,
+.echarts_2 {
+  width: 48%;
+  height: 400px;
 }
